# hyper-perf-budget

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
hyper_perf_budget/: __init__.py  core.py
tests/: test_hyper_perf_budget.py
